--- a/AmazonClone/src/App.css
+++ b/AmazonClone/src/App.css
@@ -1,10 +1,17 @@
 body {
-  margin:0
+  margin:0;
+  color:white;
 }
 
 .header {
-  display: flex;
   outline: 3px solid red;
+}
+
+.nav-belt {
+  background-color: #131921;
+  display: flex;
+  margin: .5rem;
+height:60px
 
 }
 
@@ -15,6 +22,7 @@ body {
 }
 .nav-left {
   width: auto;
+  display: flex;
   outline: 3px solid red
 
 }
@@ -25,6 +33,7 @@ body {
 }
 .nav-search {
   outline: 3px solid blue;
+  margin-inline:1rem;
 
 }
 
@@ -41,4 +50,7 @@ form {
 .nav-input {
   display: flex;
   width: 100%;
+}
+a :hover {
+  outline: 2px solid white;
 }
