--- a/AmazonClone/src/App.css
+++ b/AmazonClone/src/App.css
@@ -16,6 +16,10 @@ height:60px
 
 .location-slot {
   width:auto;
+  margin: .5rem;
+}
+.location-slot:hover {
+  outline: 1.5px solid white;
 }
 .nav-middle {
   width: auto;
@@ -54,6 +58,8 @@ form {
   display: flex;
   width: 100%;
   padding: 7px 10px 10px 0;
+
+  height:38px
 }
 
 .hello-block {
