--- a/AmazonClone/src/Card.css
+++ b/AmazonClone/src/Card.css
@@ -2,4 +2,8 @@
     max-width: 400px;
     height: 420px;
     padding-inline:10px ;
+    margin-inline:30px;
+}
+.section-1 {
+    display: flex;
 }
